Ajustes e populacao de informacoes

--- a/src/app/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/evento-detalhe/evento-detalhe.component.html
@@ -12,7 +12,7 @@
     <br />
     <h3 class="center">{{evento.nome}}</h3>
     <br />
-    <p id="sinopse" class="fonte18">
+    <p id="sinopse" class="fonte18" style="text-align: justify;">
       {{evento.sinopse}}
     </p>
     <br />
