adcionando pagina da semana de intgração

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,5 +1,13 @@
 <div class="slider">
     <ul class="slides">
+            <li>
+                    <img style="filter: brightness(70%)" src="../../../assets/images/sinf-hor3.png">
+                    <!-- random image -->
+                    <div class="caption left-align">
+                        <br><br><br><br>
+                        <a class="btn purple slide-cbs-btn" routerLink="/evento/jsint">Visão Geral</a><br><br>
+                    </div>
+                </li>
         <li>
             <img style="filter: brightness(70%)" src="../../../assets/images/jges-horizontal.png">
             <!-- random image -->
