adcionar pagina do ERSIGO

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-fixed">
+<div  class="navbar-fixed">
   <nav class="color linear">
     <div class="nav-wrapper container">
       <a id="logo-container" href="/" class="brand-logo">
@@ -10,6 +10,7 @@
       <ul class="right hide-on-med-and-down">
         <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
         <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
+        <li routerLinkActive="active"><a routerLink="/ersigo"><b>ERSIGO</b></a></li>
       </ul>
     </div>
   </nav>
