--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,6 @@
+.navbar-fixed {
+    visibility: visible;
+}
 .scrolled ul a {
     color: #0288d1;
 }
@@ -21,4 +24,4 @@
     cursor: none;
     opacity: 0.5;
     pointer-events: none;
-  }
+}
