ajuste no menu ersigo

--- a/src/app/ersigo/ersigo.component.html
+++ b/src/app/ersigo/ersigo.component.html
@@ -1,10 +1,12 @@
 <body style="background-color: #4db6ac; bottom: 0%;">
   <div class="navbarersi">
     <a><img src="../assets/images/LOGO-ERSI.png" style="height: 45px; margin-top: -5px;"></a>
-    <a (click)="scroll(introducao)">Inicio</a>
+    <a (click)="scroll(inicio)">Inicio</a>
+    <a (click)="scroll(introducao)">Sobre</a>
     <a (click)="scroll(chamada_trabalhos)">Chamada de Trabalhos</a>
-    <a (click)="scroll(instrucao_autores)">Instrução aos Autores</a>
+    <a href="http://erigo.sbc.org.br/p/242-programacao-geral">Programação</a>
   </div>
+  <a #inicio></a>
       <div class="section white lighten-5">
           <div class="row">
               <div class="column">
