--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,7 @@
 <ul id="nav-mobile" class="side-nav">
   <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
   <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
+  <li routerLinkActive="active"><a routerLink="/ersigo"><b>ERSIGO</b></a></li>
 </ul>
 
 <div *ngIf="cbs">
