--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,13 +1,25 @@
 <div class="slider">
     <ul class="slides">
-            <li>
-                    <img style="filter: brightness(70%)" src="../../../assets/images/sinf-hor3.png">
-                    <!-- random image -->
-                    <div class="caption left-align">
-                        <br><br><br><br>
-                        <a class="btn purple slide-cbs-btn" routerLink="/evento/jsint">Visão Geral</a><br><br>
-                    </div>
-                </li>
+        <li>
+            <img style="filter: brightness(60%)" src="../../../assets/images/ersigo-horizontal.png">
+            <!-- random image -->
+            <div class="caption left-align">
+                <h3>Escola Regional de Informática</h3>
+                <a class="btn orange" routerLink="/evento/eri-ersi-erad">Visão Geral</a><br>
+                <a class="btn purble" routerLink="/ersigo">ERSI-GO 2019</a><br>
+                <a class="btn red" href="http://erigo.sbc.org.br/" target="_blanck">ERI-GO 2019</a><br>
+                <a class="btn green" href="http://erigo.sbc.org.br/p/242-programacao-geral" target="_blanck">Programação</a><br>
+                <a class="btn white black-text" href="http://erigo.sbc.org.br/p/240-inscricoes" target="_blanck">Inscrições</a><br>
+            </div>
+        </li>
+        <li>
+            <img style="filter: brightness(70%)" src="../../../assets/images/sinf-hor3.png">
+                <!-- random image -->
+                <div class="caption left-align">
+                    <br><br><br><br>
+                    <a class="btn purple slide-cbs-btn" routerLink="/evento/jsint">Visão Geral</a><br><br>
+            </div>
+        </li>
         <li>
             <img style="filter: brightness(70%)" src="../../../assets/images/jges-horizontal.png">
             <!-- random image -->
@@ -34,13 +46,6 @@
                     Apresentados</a>
             </div>
         </li>
-        <li>
-            <img style="filter: brightness(60%)" src="../../../assets/images/ersigo-horizontal.png">
-            <!-- random image -->
-            <div class="caption center-align">
-                <h3>Escola Regional de Informática</h3>
-                <a class="btn orange" routerLink="/evento/eri-ersi-erad">Ver mais</a>
-            </div>
-        </li>
+        
     </ul>
 </div>
