implementação e ajustes a pagina jges2019

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,45 @@
 <footer  class="light-blue darken-3 page-footer" >
+    <div *ngIf="jges2019" class="white">
+      <hr>
+      <div class="container">
+        <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
+          <h5 align="middle" style="color: black;">Apoio:</h5>
+          <div align="middle" class="col offset-l1 l3 offset-m1 m3 s12">
+            <a href="http://www.estrategia.eti.br/" target="_blank">
+              <img src="../../assets/images/logo-estrategia.png" style="max-width:12rem">
+            </a>
+          </div>
+          <div align="center" class="col offset-l1 l3 offset-m1 m3 s12">
+            <a href="https://maximatech.com.br/" target="_blank">
+              <img src="../../assets/images/marca-maximatech-01.png" style="max-width:12rem">
+            </a>
+          </div>
+          <div align="center" class="col offset-l1 l3 offset-m1 m3 s12">
+            <a href="https://lifeapps.com.br/" target="_blank">
+              <img src="../../assets/images/Logo Life Apps.png" style="max-width:12rem">
+            </a>
+          </div>
+        </div>
+        <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
+          <h5 align="middle" style="color: black;">Realização:</h5>
+          <div align="middle" class="col offset-l1 l3 offset-m1 m3 s12">
+            <a href="http://www.inf.ufg.br" target="_blank">
+              <img src="../../assets/images/footer/logo-inf.png" style="max-width:12rem">
+            </a>
+          </div>
+          <div align="center" class="col offset-l1 l3 offset-m1 m3 s12">
+            <a href="http://apoema.inf.ufg.br" target="_blank">
+              <img src="../../assets/images/footer/logo-apoema.png" style="max-width:12rem">
+            </a>
+          </div>
+          <div align="center" class="col offset-l1 l3 offset-m1 m3 s12">
+            <a href="https://www.pucgoias.edu.br/" target="_blank">
+              <img src="../../assets/images/logo_puc_transparencia.png" style="max-width:12rem">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <div class="white">
     <hr>
