--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,15 +1,25 @@
 <div class="slider">
     <ul class="slides">
         <li>
+            <img style="filter: brightness(70%)" src="../../../assets/images/Banner-jges2019.jpg">
+                <!-- random image -->
+                <div class="caption left-align">
+                    <a class="btn purple slide-cbs-btn" routerLink="/evento/jges2019">Visão Geral</a><br><br>
+                    <a class="btn red slide-cbs-btn" href="https://forms.gle/D9JsvexMK7FZ3jCq7" target="_blank">Inscrições</a><br><br>
+                    <a class="btn green slide-cbs-btn" routerLink="/programacaojges2019">Programação</a><br><br>
+                    <a class="btn white slide-cbs-btn black-text" routerLink="/palestrantesjges2019">Ver Palestrantes</a><br><br>
+            </div>
+        </li>
+        <li>
             <img style="filter: brightness(60%)" src="../../../assets/images/ersigo-horizontal.png">
             <!-- random image -->
             <div class="caption left-align">
                 <h3>Escola Regional de Informática</h3>
-                <a class="btn orange" routerLink="/evento/eri-ersi-erad">Visão Geral</a><br>
-                <a class="btn purble" routerLink="/ersigo">ERSI-GO 2019</a><br>
-                <a class="btn red" href="http://erigo.sbc.org.br/" target="_blanck">ERI-GO 2019</a><br>
-                <a class="btn green" href="http://erigo.sbc.org.br/p/242-programacao-geral" target="_blanck">Programação</a><br>
-                <a class="btn white black-text" href="http://erigo.sbc.org.br/p/240-inscricoes" target="_blanck">Inscrições</a><br>
+                <a class="btn orange slide-cbs-btn" style="margin: 5px;" routerLink="/evento/eri-ersi-erad">Visão Geral</a><br>
+                <a class="btn purble slide-cbs-btn" style="margin: 5px;" routerLink="/ersigo">ERSI-GO 2019</a><br>
+                <a class="btn red slide-cbs-btn" style="margin: 5px;" href="http://erigo.sbc.org.br/" target="_blanck">ERI-GO 2019</a><br>
+                <a class="btn green slide-cbs-btn" style="margin: 5px;" href="http://erigo.sbc.org.br/p/242-programacao-geral" target="_blanck">Programação</a><br>
+                <a class="btn white slide-cbs-btn black-text" style="margin: 5px;" href="http://erigo.sbc.org.br/p/240-inscricoes" target="_blanck">Inscrições</a><br>
             </div>
         </li>
         <li>
