--- a/src/app/jges2019/jges2019.component.html
+++ b/src/app/jges2019/jges2019.component.html
@@ -40,7 +40,7 @@
         <td><b>14:00 – 15:00</b></td>
         <td>
           <b>Bem-estar e produtividade no mundo V.U.C.A</b><br>
-          Palestrante: Luciano Meira – São Paulo 
+          Palestrante: Luciano Meira – Goiânia 
         </td>
       </tr>
       <tr>
