--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -120,7 +120,7 @@
             class="material-icons">menu</i>
         </a>
         <ul class="left hide-on-med-and-down">
-          <li><a href="https://goo.gl/forms/cmdoJzaDd4tVG37y1" target="_blank"><b>Inscrições</b></a></li>
+          <li><a href="https://forms.gle/D9JsvexMK7FZ3jCq7" target="_blank"><b>Inscrições</b></a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
             <li routerLinkActive="active"><a routerLink="/programacaojges2019"><b>Programação</b></a></li>
@@ -132,7 +132,7 @@
 
   <ul id="nav-mobile-cbs" class="side-nav">
       <li><a routerLink="/programacaojges2019"><b>Programação</b></a></li>
-    <li><a href="https://goo.gl/forms/cmdoJzaDd4tVG37y1" target="_blank"><b>Inscrições</b></a></li>
+    <li><a href="https://forms.gle/D9JsvexMK7FZ3jCq7" target="_blank"><b>Inscrições</b></a></li>
     <li routerLinkActive="active"><a routerLink="/palestrantesjges2019"><b>Palestrantes</b></a></li>
   </ul>
 </div>
