fotos dos palestrantes

--- a/src/app/jges2019/palestrantesjges2019/palestrantesjges2019.component.html
+++ b/src/app/jges2019/palestrantesjges2019/palestrantesjges2019.component.html
@@ -7,7 +7,7 @@
     <div class="card-panel lighten-5 z-depth-1">
       <div class="row valign-wrapper">
         <div class="col s2">
-          <img src="" alt="" class="circle responsive-img">
+          <img src="assets/images/helderpinheiro.jpg" alt="" class="circle responsive-img">
           <!-- notice the "circle" class -->
         </div>
         <div class="col s10">
@@ -26,7 +26,7 @@
     <div class="card-panel lighten-5 z-depth-1">
       <div class="row valign-wrapper">
         <div class="col s2">
-          <img src="" alt="" class="circle responsive-img">
+          <img src="assets/images/adriana silveira.jpg" alt="" class="circle responsive-img">
           <!-- notice the "circle" class -->
         </div>
         <div class="col s10">
@@ -44,7 +44,7 @@
       <div class="card-panel lighten-5 z-depth-1">
         <div class="row valign-wrapper">
           <div class="col s2">
-            <img src="" alt="" class="circle responsive-img">
+            <img src="assets/images/luciano-meira.jpg" alt="" class="circle responsive-img">
             <!-- notice the "circle" class -->
           </div>
           <div class="col s10">
@@ -65,7 +65,7 @@
         <div class="card-panel lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img src="" alt="" class="circle responsive-img">
+              <img src="assets/images/wagner-patrus.jpg" alt="" class="circle responsive-img">
               <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
