--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,17 +4,22 @@
       <div class="container">
         <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
           <h5 align="middle" style="color: black;">Apoio:</h5>
-          <div align="middle" class="col offset-l1 l3 offset-m1 m3 s12">
+          <div align="middle" class="col offset-l1 l2 offset-m1 m3 s12">
+            <a href="http://www.estrategia.eti.br/" target="_blank">
+              <img src="../../assets/images/sindinformatica.jpg" style="max-width:12rem">
+            </a>
+          </div>
+          <div align="middle" class="col offset-l1 l2 offset-m1 m3 s12">
             <a href="http://www.estrategia.eti.br/" target="_blank">
               <img src="../../assets/images/logo-estrategia.png" style="max-width:12rem">
             </a>
           </div>
-          <div align="center" class="col offset-l1 l3 offset-m1 m3 s12">
+          <div align="center" class="col offset-l1 l2 offset-m1 m3 s12">
             <a href="https://maximatech.com.br/" target="_blank">
               <img src="../../assets/images/marca-maximatech-01.png" style="max-width:12rem">
             </a>
           </div>
-          <div align="center" class="col offset-l1 l3 offset-m1 m3 s12">
+          <div align="center" class="col offset-l1 l2 offset-m1 m3 s12">
             <a href="https://lifeapps.com.br/" target="_blank">
               <img src="../../assets/images/Logo Life Apps.png" style="max-width:12rem">
             </a>
