inclusão de videos na pagina de programação jges2019

--- a/src/app/jges2019/jges2019.component.html
+++ b/src/app/jges2019/jges2019.component.html
@@ -1,7 +1,29 @@
 <app-cabecajges></app-cabecajges>
 <div class="container">
+  
+  <div class="row" align="center">
+      
+    <div class="col offset-l1 l3 offset-m1 m3 s12">
+        <h5 align="center" class="font-bold brown-text text-darken-4">Denia Kuhn</h5>
+      <iframe src="https://drive.google.com/file/d/1eROb8W1ulK07MCme_2ctKy1nzsSrr84Q/preview" width="320" height="240"></iframe>
+    </div>
+    <div class="col offset-l1 l3 offset-m1 m3 s12">
+        <h5 align="center" class="font-bold brown-text text-darken-4">Marcelo Porto</h5>
+      <iframe src="https://drive.google.com/file/d/1aKtUQDK-_Pq1Q1xoa1Mtw35pqGqcVfIl/preview" width="320" height="240"></iframe>
+    </div>
+  </div>
+  <div class="row" align="center">
+      <div class="col offset-l1 l3 offset-m1 m3 s12">
+          <h5 align="center" class="font-bold brown-text text-darken-4">Denise Patrus</h5>
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/Nk5H6E-ETLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col offset-l1 l3 offset-m1 m3 s12">
+          <h5 align="center" class="font-bold brown-text text-darken-4">Marco Cesar</h5>
+        <iframe src="https://drive.google.com/file/d/1NVcLzFLiVH9m8q-lwglLPRT79DCrUCEf/preview" width="320" height="240"></iframe>
+      </div>
+  </div>
   <br>
-  <h4 align="center" class="font-bold brown-text text-darken-4">Programação Geral</h4>
+  <h5 align="center" class="font-bold brown-text text-darken-4">Programação Geral</h5>
   <br>
   <h5 style="padding:10px" class="deep-orange darken-3 white-text" align="center">13/11/2019</h5>
   <table class="striped centered responsive-table">
